--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -10,12 +10,9 @@ jobs:
     strategy:
       matrix:
         image:
-          - centos:6
-          - centos:7
-          - debian:buster
-          - debian:stretch
-          - ubuntu:16.04
-          - ubuntu:18.04
+          - centos
+          - debian
+          - ubuntu
     steps:
       - name: checkout
         uses: actions/checkout@v2
