--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,18 +3,28 @@ galaxy_info:
   role_name: azcopy
   author: Eduardo Medeiros
   description: This is a role for azcopy installation.
-  license: GPLv3
+  license: BSD
   min_ansible_version: 2.5
   platforms:
     - name: EL
       versions:
-        - all
+        - 6
+        - 7
+    - name: Fedora
+      versions:
+        - 29
+        - 30
+        - 31
     - name: Ubuntu
       versions:
-        - all
+        - xenial
+        - bionic
     - name: Debian
       versions:
-        - all
+        - wheezy
+        - jessie
+        - stretch
+        - buster
   galaxy_tags:
     - azure
     - blob
