--- a/meta/main.yml
+++ b/meta/main.yml
@@ -12,7 +12,6 @@ galaxy_info:
         - 7
     - name: Fedora
       versions:
-        - 29
         - 30
         - 31
     - name: Ubuntu
@@ -28,4 +27,6 @@ galaxy_info:
     - blob
     - azcopy
     - storage
+    - microsoft
+    - sync
 dependencies: []
