--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -6,8 +6,8 @@ driver:
 lint:
   name: yamllint
 platforms:
-  - name: centos-6
-    image: centos:6
+  # - name: centos-6
+  #   image: centos:6
   - name: centos-7
     image: centos:7
   - name: debian-stretch
