--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -1,6 +1,14 @@
 ---
 name: Molecule
-on: push
+
+on:
+  push:
+    branches:
+      - master
+      - release/v*
+  pull_request:
+    branches:
+      - master
 
 jobs:
   molecule:
