--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,20 +4,20 @@ galaxy_info:
   author: Eduardo Medeiros
   description: This is a role for azcopy installation.
   license: MIT
-  min_ansible_version: 2.7
+  min_ansible_version: 2.8
   platforms:
     - name: EL
       versions:
-        - 6
         - 7
+        - 8
     - name: Fedora
       versions:
-        - 30
         - 31
+        - 32
     - name: Ubuntu
       versions:
-        - xenial
         - bionic
+        - focal
     - name: Debian
       versions:
         - stretch
