--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -3,26 +3,24 @@ dependency:
   name: galaxy
 driver:
   name: docker
-lint:
-  name: yamllint
+lint: |
+  set -e
+  yamllint .
+  ansible-lint
 platforms:
-  - name: centos-6
-    image: centos:6
   - name: centos-7
     image: centos:7
+  - name: centos-8
+    image: centos:8
   - name: debian-stretch
     image: debian:stretch
   - name: debian-buster
     image: debian:buster
-  - name: ubuntu-16-04
-    image: ubuntu:16.04
   - name: ubuntu-18-04
     image: ubuntu:18.04
+  - name: ubuntu-20-04
+    image: ubuntu:20.04
 provisioner:
   name: ansible
-  lint:
-    name: ansible-lint
 verifier:
-  name: testinfra
-  lint:
-    name: flake8
+  name: ansible
