updating github actions for molecule

--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -1,20 +1,14 @@
 ---
-name: build
-
 on:
-  push:
-    branches:
-      - master
-      - release/v*
-  pull_request:
-    branches:
-      - master
+  - push
 
 jobs:
-  molecule:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: checkout
+        uses: actions/checkout@v2
         with:
           path: "${{ github.repository }}"
-      - uses: gofrolist/molecule-action@master
+      - name: molecule
+        uses: robertdebock/molecule-action@2.3.4
