--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -1,6 +1,14 @@
 ---
+name: build
+
 on:
-  - push
+  push:
+    branches:
+      - master
+      - release/v*
+  pull_request:
+    branches:
+      - master
 
 jobs:
   build:
