updated azcopy to 10.5.0

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,6 +4,7 @@
   package:
     name: "{{ item }}"
     state: present
+    update_cache: yes
   with_items: "{{ azcopy_pkg_deps }}"
 
 - name: Create remote temporary folder
