--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -4,4 +4,5 @@
   tasks:
     - name: "Include ansible-role-azcopy"
       include_role:
-        name: "ansible-role-azcopy"
+        name: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
+        
