--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,58 +7,19 @@
     update_cache: yes
   with_items: "{{ azcopy_pkg_deps }}"
 
-- name: Create remote temporary folder
-  file:
-    path: "{{ azcopy_tmp_install }}"
-    state: directory
-  register: azcopy_create_remote_dir
+- name: Check current version installed
+  shell: "{{ azcopy_bin_path }}/azcopy --version 2>&1 | head -n 1 | grep {{ azcopy_version }}"
+  failed_when: false
+  changed_when: false
+  register: version
 
-- name: Checking current version installed
-  lineinfile:
-    name: "{{ azcopy_tmp_install }}/azcopy_version.txt"
-    regexp: '^'
-    line: "{{ azcopy_version }}"
-    state: present
-    create: yes
-  register: azcopy_version_installed
-
-- name: Display previous version installed
-  debug:
-    msg: "The version {{ azcopy_version }} is already installed"
-  when: azcopy_version_installed is not changed
-
-- name: Preparing for installation
-  debug:
-    msg: "The version {{ azcopy_version }} will be installed"
-  when: azcopy_version_installed is changed
-
-- name: "Download azcopy {{ azcopy_version }} package"
-  get_url:
-    url: "{{ azcopy_pkg_url }}"
-    dest: "{{ azcopy_tmp_install }}/azcopy_linux_amd64_{{ azcopy_version }}.tar.gz"
-    checksum: "{{ azcopy_sha256 }}"
-    validate_certs: false
-    timeout: 30
-  register: azcopy_download
-  when:
-    - azcopy_version_installed is changed or azcopy_create_remote_dir is changed
-
-- name: "Unarchive azcopy {{ azcopy_version }} package"
+- name: "Install azcopy {{ azcopy_version }}"
   unarchive:
-    remote_src: true
-    owner: root
-    group: root
-    src: "{{ azcopy_tmp_install }}/azcopy_linux_amd64_{{ azcopy_version }}.tar.gz"
+    src: "{{ azcopy_pkg_url }}"
     dest: "{{ azcopy_bin_path }}"
-    mode: 0755
+    remote_src: yes
     exclude:
       - ThirdPartyNotice.txt
+      - NOTICE.txt
     extra_opts: [--strip-components=1]
-  when:
-    - azcopy_version_installed is changed or azcopy_create_remote_dir is changed
-
-- name: "Cleanup azcopy_linux_amd64_{{ azcopy_version }}.tar.gz"
-  file:
-    path: "{{ azcopy_tmp_install }}/azcopy_linux_amd64_{{ azcopy_version }}.tar.gz"
-    state: absent
-  when: azcopy_download is changed
+  when: version.rc != 0
