--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -10,8 +10,10 @@ lint: |
 platforms:
   - name: centos-7
     image: centos:7
-  - name: centos-8
-    image: centos:8
+  - name: almalinux-8
+    image: almalinux:8
+  - name: rockylinux-8
+    image: rockylinux:8
   - name: debian-buster
     image: debian:buster
   - name: debian-bullseye
