--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,20 +1,15 @@
 ---
 galaxy_info:
   role_name: azcopy
-  namespace: eduardolmedeiros
   author: Eduardo Medeiros
   description: This is a role for azcopy installation.
   license: MIT
-  min_ansible_version: 2.8
+  min_ansible_version: "2.9"
   platforms:
     - name: EL
       versions:
-        - 7
-        - 8
-    - name: Fedora
-      versions:
-        - 31
-        - 32
+        - "7"
+        - "8"
     - name: Ubuntu
       versions:
         - bionic
