--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -12,8 +12,12 @@ platforms:
     image: centos:7
   - name: almalinux-8
     image: almalinux:8
+  - name: almalinux-9
+    image: almalinux:9
   - name: rockylinux-8
     image: rockylinux:8
+  - name: rockylinux-9
+    image: rockylinux:9
   - name: debian-buster
     image: debian:buster
   - name: debian-bullseye
