--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,5 +6,5 @@ azcopy_pkg_deps:
 azcopy_username: root
 azcopy_group: root
 azcopy_bin_path: /usr/local/bin
-azcopy_pkg_url: https://azcopyvnext.azureedge.net/release20230530/azcopy_linux_amd64_10.19.0.tar.gz
-azcopy_version: 10.19.0
+azcopy_pkg_url: https://azcopyvnext.azureedge.net/releases/release-10.20.1-20230809/azcopy_linux_amd64_10.20.1.tar.gz
+azcopy_version: 10.20.1
